modifica updateBookFromDatabase